--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Джонни тунец</title>
+    <link rel="icon" href="./src/assets/icons/Main.svg">
   </head>
   <body>
     <div id="root"></div>
