--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
     <noscript>
       <p>Для работы сайта требуется JavaScript.</p>
     </noscript>
-    <script type="module" src="/src/main.jsx"></script>
+    <script type="module" src="/src/Main.jsx"></script>
   </body>
 </html>
