--- a/index.html
+++ b/index.html
@@ -3,7 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title></title>
+    <title>Джонни Тунец</title>
+
+    <meta name="author" content="Kibutsuji"/>
+    <meta name="copyright" content="Johnny Tuna 2025"/>
+    <meta name="description" content="🍕 Пицца и 🍣 роллы с доставкой за 60 минут! Акции каждый день. Бесплатная доставка от 1500 руб."/>
+    <meta name="keywords" content="пицца, роллы, доставка еды, кафе, еда на дом">
+    <meta name="theme-color" content="#ffffff"/>
+    <meta name="robots" content="index, follow">
+
     <link rel="icon" href="./src/assets/icons/Main.svg">
   </head>
   <body>
