--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
   <body>
     <div id="root"></div>
     <div id="mail-send"></div>
+    <div id="stock-modal"></div>
     <noscript>
       <p>Для работы сайта требуется JavaScript.</p>
     </noscript>
