--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   </head>
   <body>
     <div id="root"></div>
-    <div id="mail-send"></div>
+    <div id="modal-text"></div>
     <noscript>
       <p>Для работы сайта требуется JavaScript.</p>
     </noscript>
