fix(global): improve structure and some bug fix

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta name="theme-color" content="#ffffff"/>
     <meta name="robots" content="index, follow">
 
-    <link rel="icon" href="./src/assets/icons/Main.svg">
+    <link rel="icon" href="src/assets/icons/MainIcons/Main.svg">
   </head>
   <body>
     <div id="root"></div>
